# renesas_devapp

./: .gitignore  CMakeLists.txt  README.md
convert/: auto_convert_yolov3_onnx_v2x.sh  auto_convert_yolov8_onnx_v2x.sh
data/RZV2L_AiLibrary/01_Head_count/Head_count_img/: Makefile
data/RZV2L_AiLibrary/01_Head_count/Head_count_usbcam/: Makefile
data/rzv2l_drp-ai_gui_demo/: ReadMe.md
data/rzv2l_drp-ai_gui_demo/Age_Gender_Detect/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Age_Gender_Detect/src/: camera.cpp  camera.h  define.h  sample_app_age_gender_tinyyolov2_cam.cpp
data/rzv2l_drp-ai_gui_demo/Elderly_fall_detection/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Elderly_fall_detection/src/: camera.cpp  camera.h  define.h  sample_app_hrnet_pre-tinyyolov2_cam.cpp
data/rzv2l_drp-ai_gui_demo/Face_recognition/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Face_recognition/src/: Face_recognition.cpp  camera.h
data/rzv2l_drp-ai_gui_demo/Gaze_Detection/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Gaze_Detection/src/: camera.cpp  mouse.h  sample_app_resnet-18_tinyyolov2_cam.cpp
data/rzv2l_drp-ai_gui_demo/Hand_Gesture/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Hand_Gesture/src/: camera.cpp  sample_gesture_prediction.cpp
data/rzv2l_drp-ai_gui_demo/Head_count_cam_app/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Head_count_cam_app/src/: camera.h  mouse.cpp  sample_app_yolov3_cam.cpp
data/rzv2l_drp-ai_gui_demo/Line_crossing_object_counting/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Line_crossing_object_counting/src/: sample_app_tinyyolov2_cam.cpp
data/rzv2l_drp-ai_gui_demo/Pose_hrnet_pre-tinyyolov2_cam/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Pose_hrnet_pre-tinyyolov2_cam/src/: box.cpp  box.h  define.h  image.cpp  image.h  mouse.cpp  sample_app_hrnet_pre-tinyyolov2_cam.cpp  wayland.cpp  wayland.h
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/: .cproject  .project
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/TinyYolov2/: makefile  subdir.mk
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/TinyYolov3/: makefile  subdir.mk
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/YoloV2/: makefile  sample_app_yolov2_cam  subdir.mk
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/YoloV3/: makefile
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/YoloV5/: makefile  sample_app_yolov5s_cam
data/rzv2l_drp-ai_gui_demo/Yolo_detect_cam/src/: ascii.cpp  define.h  mouse.cpp
data/rzv2l_drp-ai_gui_demo/exe/ObjectDetection/: sample_app_tinyyolov2_cam  sample_app_tinyyolov3_cam  sample_app_yolov3_cam
data/rzv2l_drp-ai_gui_demo/exe/PoseEstimation/: Pose_hrnet_pre-tinyyolov2_cam
data/rzv2l_drp-ai_gui_demo/rzv2lDemo/: .cproject  .project  lv_drv_conf.h  main.c  mouse_event.c  mouse_event.h
data/rzv2l_drp-ai_gui_demo/rzv2lDemo/images/: ui_img_renesas_logomark_l_png.c
data/rzv2l_drp-ai_gui_demo/rzv2lDemo/src/: app_button.c  app_button.h  app_events.c  app_events.h  app_panel.c  app_panel.h  app_screen.c  app_screen.h  rzv2l_Demo.c
data/rzv2l_drp-ai_gui_demo/systemd_settings/: ReadMe.md  autorun.service  autostart_app_launch.sh  weston.ini
data/rzv_ai_sdk/R01_object_detection_yolov5/src/: define.h  main.cpp
data/rzv_ai_sdk/R01_object_detection_yolov8/exe_v2l/: object_detection
data/rzv_ai_sdk/R01_object_detection_yolov8/src/: define.h  main.cpp
data/rzv_ai_sdk/R01_yolov5_cam/src/: ascii.h  camera.cpp  define.h  sample_app_yolo_cam.cpp
data/traffic_violation/: CMakeLists.txt  README.md  config.yaml
data/traffic_violation/exe_v2l/: README.md  config.yaml
data/traffic_violation/exe_v2l/models/license_plate_detector/: deploy.json
data/traffic_violation/exe_v2l/models/license_plate_detector/preprocess/: drp_param_info.txt
data/traffic_violation/exe_v2l/models/yolov8n_onnx/: label.txt
data/traffic_violation/exe_v2l/models/yolov8n_onnx copy/preprocess/: pp_addrmap_intm.txt
data/traffic_violation/src/: VideoInput.cpp  VideoInput.h  main.cpp
data/traffic_violation/src/common/: config.cpp  config.h  types.h
data/traffic_violation/src/common/lp_text_proc_module/: LpTextProc.cpp  LpTextProc.h
data/traffic_violation/src/common/lp_validate_module/: LpValidate.h
data/traffic_violation/src/models/: TrafficDetector.cpp  TrafficDetector.h  box.cpp
data/traffic_violation/src/output/: ViolationLogger.cpp  ViolationLogger.h
data/traffic_violation/src/streaming/: StreamPipeline.cpp  StreamPipeline.h
data/traffic_violation/src/tracking/: VehicleTracker.cpp  VehicleTracker.h
data/traffic_violation/src/violation/: HelmetRule.cpp  LaneLineRule.cpp  RedLightRule.cpp  RedLightRule.h  ViolationEngine.cpp  ViolationEngine.h  WrongLaneRule.cpp  WrongLaneRule.h
data/traffic_violation/tools/: pick_lane_lines.py
exe_v2l/: config.yaml
exe_v2l/models/Multi_camera_vehicle_detection_tinyyolov3/: labels.txt
src/: VideoInput.h  main.cpp
src/common/: config.cpp  config.h  types.h
src/common/lp_regex_module/: lp_regex_function.cpp  lp_regex_function.h
src/common/lp_validate_module/: LpValidate.cpp
src/common/tess_module/: TesseractEngine.cpp  TesseractEngine.h
src/drp/: define.h
src/models/: TrafficDetector.cpp  box.h
src/output/: ViolationLogger.cpp
src/tracking/: VehicleTracker.h
src/violation/: HelmetRule.h  IViolationRule.h  LaneLineRule.cpp  LaneLineRule.h  RedLightRule.cpp  RedLightRule.h  ViolationEngine.cpp  ViolationEngine.h  WrongLaneRule.cpp  WrongLaneRule.h
toolchain/: aarch64-cross.cmake
tools/: pick_lane_lines.py
tutorials/: README.md  addr_map.yaml  preprocess.yaml
tutorials/temp/20260301_052829/tvmgen_default_tvmgen_default_mera_drp_main_0/: drp_addr_map.yaml  drp_prepost.yaml
tutorials/temp/20260301_094525/tvmgen_default_mera_drp_main_0/: drp_addr_map.yaml  drp_prepost.yaml  model.onnx
tutorials/yolov3_81_onnx/: deploy.json  deploy.params
tutorials/yolov3_81_onnx/preprocess/: drp_param_info.txt  pp_addrmap_intm.txt
tutorials/yolov3_onnx/: deploy.json
tutorials/yolov5s_onnx/: deploy.json
tutorials/yolov8n_bikehelmet_onnx/: deploy.json
tutorials/yolov8n_onnx/: deploy.json
(+896 files in other folders)
